--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
         <h2 class="portfolio_title">Sharetastic</h2>
         <p class="portfolio_text">Our platform allows neighbors to connect by sharing skills to accomplish task by trading skills rather than paying for services.</p>
 
-        <p><strong>Responsibilities:</strong> We pair programed the whole time. I spent a lot of time working on the front end of this project, particularly the styling and the logic of the view pages.</p>
+        <p><strong>Responsibilities:</strong> We pair programmed the whole time. I spent a lot of time working on the front end of this project, particularly the styling and the logic of the view pages.</p>
 
         <p><strong>Languages:</strong> Ruby, HTML, CSS</p>
         <p><strong>Frameworks:</strong> Rails</p>
@@ -119,14 +119,14 @@
         <h2 class="portfolio_title">Vagabonder</h2>
         <p class="portfolio_text">A web site to discuss your travels and favorite cities.</p>
 
-        <p><strong>Responsibilities:</strong> We pair programed the whole time. I spent a lot of time troubleshooting and looking for solutions to broken code.</p>
+        <p><strong>Responsibilities:</strong> We pair programmed the whole time. I spent a lot of time troubleshooting and looking for solutions to broken code.</p>
 
         <p><strong>Languages:</strong> Ruby, HTML, CSS</p>
         <p><strong>Frameworks:</strong> Rails</p>
         <p><strong>Database:</strong> Postgresql</p>
         <p><strong>Other:</strong> Git, Bootstrap</p>
     
-        <a href="https://sharetastic.herokuapp.com/">Sharetastic</a>
+        <a href="http://vagabonder.herokuapp.com/">Vagabonder</a>
         <br>
         <a href="https://github.com/bw-giraffe/project_vagabond">GitHub Link</a>
       </div>
