--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,11 @@
   </div>
 <br>
 <br>
-  <div class="container">
-
+  <div class="container text-center">
+    <h1 class="contact-title">Noah Wimmer</h1>
+    <p>Email me at nwimmer123@yahoo.com</p>
+    <p>Check out my work on <a href="https://github.com/nwimmer123">GitHub</a></p>
+    <p>Here's my <a href="https://www.linkedin.com/in/noahwimmer">Linked In</a> profile</p>
   </div>
 </div>
 
