--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
         <p><strong>Frameworks:</strong> Node, Express</p>
         <p><strong>Libraries:</strong> jQuery</p>
         <p><strong>Database:</strong> Moongoose, MongoDB</p>
-        <p><strong>Other:</strong> Git, JSON, Bootstrap, EJS</p>
+        <p><strong>Other:</strong> Git, Bootstrap, EJS</p>
     
         <a href="https://mysterious-basin-2931.herokuapp.com/">Read It</a>
         <br>
