Changed website about me

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,27 +66,23 @@
         <p><strong>Libraries:</strong> jQuery</p>
         <p><strong>Database:</strong> Moongoose, MongoDB</p>
         <p><strong>Other:</strong> Git, Bootstrap, EJS</p>
-    
-        <a href="https://mysterious-basin-2931.herokuapp.com/">Read It</a>
-        <br>
-        <a href="https://github.com/nwimmer123/project-01">GitHub Link</a>
+
+        <a href="https://github.com/nwimmer123/boilerplate-node-ejs-auth">GitHub Link</a>
       </div>
 
       <div class="col-sm-6">
-        <img src="public/images/adventures.png" class="portfolio_pic">
-        <h2 class="portfolio_title">Adventure Creator</h2>
-        <p class="portfolio_text">A user can play and create "Choose Your Own Adventure" stories.</p>
+        <img src="public/images/jade.png" class="portfolio_pic">
+        <h2 class="portfolio_title">Node Auth Boilerplate using Jade</h2>
+        <p class="portfolio_text">Use this boilerplate to start an app using Jade. Clone it from the github link bellow.</p>
 
-        <p><strong>Languages:</strong> Ruby, HTML, CSS</p>
-        <p><strong>Frameworks:</strong> Rails</p>
-        <p><strong>Database:</strong> Postgresql</p>
-        <p><strong>Other:</strong> Git, Bootstrap</p>
+        <p><strong>Languages:</strong> JavaScript, HTML, CSS</p>
+        <p><strong>Frameworks:</strong> Node, Express</p>
+        <p><strong>Libraries:</strong> jQuery</p>
+        <p><strong>Database:</strong> Moongoose, MongoDB</p>
+        <p><strong>Other:</strong> Git, Bootstrap, Jade</p>
 
-        <a href="https://adventure-creator.herokuapp.com/">Adventure Creator</a>
-        <br>
-        <a href="https://github.com/nwimmer123/Adventure_Creator">GitHub Link</a>
+        <a href="https://github.com/nwimmer123/boilerplate-node-jade-auth">GitHub Link</a>
       </div>
-    </div>
 
       <div class="text-center portfolio_title">
         <h1>Solo Projects</h1>
