added ejs server

--- a/index.html
+++ b/index.html
@@ -61,3 +61,4 @@
   </body>
 </html>
 
+call berkeley family dental 510 843 4450 we need a referal to Hercules Kids DC053761 fax to 510 900 6248 for both kids
