--- a/portfolio.html
+++ b/portfolio.html
@@ -83,12 +83,37 @@
 
         <a href="https://github.com/nwimmer123/boilerplate-node-jade-auth">GitHub Link</a>
       </div>
-
+      <br>
+      <br>
       <div class="text-center portfolio_title">
         <h1>Solo Projects</h1>
       </div>
       <br>
       <div class="container-fluid row border-between">
+
+        <div class="col-sm-6">
+          <img src="public/images/excel.png" class="portfolio_pic">
+          <h2 class="portfolio_title">Freelance Work</h2>
+          <p class="portfolio_text">Site for an Excel consultant.</p>
+          <p><strong>Languages:</strong> JavaScript, HTML, CSS</p>
+          <p><strong>Other:</strong> Git, Bootstrap, GoDaddy Hosting</p>
+      
+          <a href="https://ExcelExcelExcel.com/">ExcelExcelExcel</a>
+          <br>
+          <a href="https://github.com/nwimmer123/david-excel">GitHub Link</a>
+        </div>
+
+        <div class="col-sm-6">
+          <img src="public/images/andersen.png" class="portfolio_pic">
+          <h2 class="portfolio_title">Freelance Work</h2>
+          <p class="portfolio_text">Site for a structural engineer.</p>
+          <p><strong>Languages:</strong> JavaScript, HTML, CSS</p>
+          <p><strong>Other:</strong> Git, Bootstrap, GoDaddy Hosting</p>
+      
+          <a href="https://andersen-engineering.com/">Andersen Engineering</a>
+          <br>
+          <a href="https://github.com/nwimmer123/david-excel">GitHub Link</a>
+        </div>
 
       <div class="col-sm-6">
         <img src="public/images/read_it.png" class="portfolio_pic">
