--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
     I look forward to a long career of building cool stuff so I can keep doing cool stuff!
     </div>
   </div>
+  <br>
+  <br>
+  <div class="container text-center">
+    <h3 class="contact-title">Contact</h3>
+    <p>Email me at <a href="mailto:nwimmer123@yahoo.com">nwimmer123@yahoo.com</a></p>
+    <p>Check out my work on <a href="https://github.com/nwimmer123">GitHub</a></p>
+    <p>Here's my <a href="https://www.linkedin.com/in/noahwimmer">Linked In</a> profile</p>
+  </div>
+
+  <footer>
+    <div class="container">
+      <p class="footer text-center text-muted">© Copyright 2016 Noah Wimmer</p>
+    </div>
+  </footer>
 
 
 
