fixed banner colors

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
     </nav>
   </div>
 
-  <div id= "banner">
+  <div class="banner">
     <div class="container text-center">
-      <h1>Noah Wimmer</h1>
-      <h2>Developer</h2>
+
+      <h1 class="title">Noah Wimmer</h1>
+      <h2 class="title">Developer</h2>
     </div>
   </div>
 
@@ -67,8 +68,7 @@
     I look forward to a long career of building cool stuff so I can keep doing cool stuff!
     </div>
   </div>
-  <br>
-  <br>
+
   <div class="container text-center">
     <h3 class="contact-title">Contact</h3>
     <p>Email me at <a href="mailto:nwimmer123@yahoo.com">nwimmer123@yahoo.com</a></p>
