--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="container text-center">
-    <h3 class="contact-title">Contact</h3>
+    <h2 class="title">Contact</h2>
     <p>Email me at <a href="mailto:nwimmer123@yahoo.com">nwimmer123@yahoo.com</a></p>
     <p>Check out my work on <a href="https://github.com/nwimmer123">GitHub</a></p>
     <p>Here's my <a href="https://www.linkedin.com/in/noahwimmer">Linked In</a> profile</p>
