--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Home</a>
+        <a class="navbar-brand" href="#home">Home</a>
       </div>
       <div class="collapse navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="about_me.html">About Me</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
@@ -45,7 +44,7 @@
 
   <div class="banner">
     <div class="container text-center">
-
+      <a name="home"></a>
       <h1 class="title">Noah Wimmer</h1>
       <h2 class="title">Developer</h2>
     </div>
@@ -70,7 +69,33 @@
   </div>
 
   <div class="container text-center">
+    <h2 class="title">Portfolio</h2>
+      <a name="portfolio"></a>
+
+    <div class="col-sm-6">
+      <img src="public/images/andersen.png" id="andersen_pic" class="portfolio_pic">
+      <div id="andersen_text" class="portfolio_text">
+        <p><strong>Languages:</strong> JavaScript, HTML, CSS</p>
+        <p><strong>Other:</strong> Git, Bootstrap, GoDaddy Hosting</p>
+    
+        <a href="https://andersen-engineering.com/">Andersen Engineering</a>
+        <br>
+        <a href="https://github.com/nwimmer123/david-excel">GitHub Link</a>
+
+      </div>
+      <h4>Freelance Work</h4>
+    </div>
+
+    <div class="col-sm-6">
+      <img src="public/images/excel.png" class="portfolio_pic">
+      <h4>Freelance Work</h4>
+    </div>
+
+  </div>
+
+  <div class="container text-center">
     <h2 class="title">Contact</h2>
+      <a name="contact"></a>
     <p>Email me at <a href="mailto:nwimmer123@yahoo.com">nwimmer123@yahoo.com</a></p>
     <p>Check out my work on <a href="https://github.com/nwimmer123">GitHub</a></p>
     <p>Here's my <a href="https://www.linkedin.com/in/noahwimmer">Linked In</a> profile</p>
@@ -81,9 +106,6 @@
       <p class="footer text-center text-muted">© Copyright 2016 Noah Wimmer</p>
     </div>
   </footer>
-
-
-
 
   </body>
 </html>
