added jquery mobile and tap function for mobile

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- VENDOR SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
@@ -88,8 +89,6 @@
         <p><a href="https://andersen-engineering.com/">Andersen Engineering</a></p>
         
         <p><a href="https://github.com/nwimmer123/david-excel">GitHub Link</a></p>
-
-        
 
     </div>
 
