--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 
     <!-- VENDOR SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
-    <script src="public/js/app.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- Font -->
     <link href='https://fonts.googleapis.com/css?family=Goblin+One' rel='stylesheet' type='text/css'>
@@ -53,7 +53,7 @@
 
   <div class="container">
     <div class="text-center">
-      <img src="public/images/noah.jpg" class="me">
+      <img src="/images/noah.jpg" class="me">
     </div>
     <div class="about_me">
     I have a passion for building and fixing things. Let me build something for you. 
@@ -77,7 +77,7 @@
 
         <h4>Freelance Work</h4>
         
-        <img src="public/images/andersen.png" class="portfolio_pic" id="test_pic">
+        <img src="/images/andersen.png" class="portfolio_pic" id="test_pic">
 
         <div id="test_text">
           <p>Site for a structural engineer.</p>
@@ -92,16 +92,9 @@
     </div>
 
 
-    <div class="col-sm-6">
-    
-        <img src="public/images/andersen.png" class="portfolio_pic" id="andersen_pic">
-        <div class="portfolio-text" id="andersen_text">Hi</div>
-        <h4>Freelance Work</h4>
-
-    </div>
 
     <div class="col-sm-6">
-      <img src="public/images/excel.png" class="portfolio_pic">
+      <img src="/images/excel.png" class="portfolio_pic">
       <h4>Freelance Work</h4>
     </div>
 
