--- a/portfolio.html
+++ b/portfolio.html
@@ -111,9 +111,9 @@
           <p><strong>Languages:</strong> JavaScript, HTML, CSS</p>
           <p><strong>Other:</strong> Git, Bootstrap, GoDaddy Hosting</p>
       
-          <a href="https://andersen-engineering.com/">Andersen Engineering</a>
+          <a href="https://andersen-engineering.com">Andersen Engineering</a>
           <br>
-          <a href="https://github.com/nwimmer123/david-excel">GitHub Link</a>
+          <a href="https://github.com/nwimmer123/andersen-engineering">GitHub Link</a>
         </div>
 
       <div class="col-sm-6">
