reseeded w all data

--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@
 
         <p><strong>Languages:</strong> Ruby, HTML, CSS</p>
         <p><strong>Frameworks:</strong> Rails</p>
-        <p><strong>Database:</strong> Postgresql</p>
+        <p><strong>Database:</strong> PostgreSQL</p>
         <p><strong>Other:</strong> Git, Bootstrap</p>
 
         <a href="https://adventure-creator.herokuapp.com/">Adventure Creator</a>
